--- a/Google_treads_with_python.ipynb
+++ b/Google_treads_with_python.ipynb
@@ -1706,7 +1706,18 @@
    "id": "06ac3549",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "916bb766",
+   "metadata": {},
+   "source": [
+    "# Fim"
+   ]
   }
  ],
  "metadata": {
